# terpy

./: .gitignore  Cargo.toml
.cargo/: config
core/: build.rs
core/src/pb/: mod.rs  user.rs
diesel_compat/: Cargo.toml  diesel.toml
diesel_compat/src/: auto.rs  lib.rs
diesel_compat/src/db/: mod.rs  ops.rs
diesel_compat/src/db/pool/: mod.rs  pool.rs  rocket_wrapper.rs  tonic_wrapper.rs
diesel_compat/src/models/: grower.rs  mod.rs  user.rs
gateway/: Cargo.toml  Rocket.toml
gateway/src/: auth.rs  main.rs  router.rs  user_interceptor.rs
migrations/2023-02-21-231652_init_user_service/: up.sql
migrations/2023-02-22-023356_init_grower/: down.sql  up.sql
orm/: Cargo.toml
orm/src/: auto.rs  lib.rs
orm/src/db/: mod.rs  ops.rs
orm/src/db/pooling/: mod.rs  pool.rs  rocket_wrapper.rs  tonic_wrapper.rs
orm/src/models/: grower.rs  mod.rs  user.rs
prostgen/: Cargo.toml  build.rs
prostgen/src/: lib.rs
prostgen/src/pb/: grower.rs  mod.rs  user.rs
proto/: grower-service.proto  user-service.proto
simulation/: insert_cannibanoid_screen.py  simulate_insert_cannibanoid.py  simulate_spawn_terpy.py  spawn_gateway.py  spawn_grower_service.py  spawn_user_service.py
terpy-grower/: Cargo.toml
terpy-grower/src/: lib.rs  main.rs
terpy-user/: Cargo.toml
terpy-user/src/: lib.rs  main.rs
