[package]
name = "diesel_compat"
version = "0.1.0"
edition = "2021"

[lib]
name = "diesel_compat"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2"] }
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
tonic = "0.8.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dependencies.prostgen]
path = "../prostgen"
