[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tonic = "0.8.3"
tonic-web = "0.5.0"

[dependencies.user]
path = "../terpy-user"

[dependencies.prostgen]
path = "../prostgen"
