[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratelimit = "0.5.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-governor = "0.1.0-rc.4"
rocket_auth = "0.4.0"
serde_json = "1.0.93"
tonic = "0.8.3"
tonic-web = "0.5.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]

[dependencies.prostgen]
path = "../prostgen"

[dependencies.terpy-orm]
path = "../orm"
