[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
log = "0.4.17"
pretty_env_logger = "0.4.0"
prost = "0.11.6"
tonic = "0.8.3"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[dependencies.terpy-core]
path = "../prostgen"

[build-dependencies]
tonic-build = "*"
